--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Jiuge\\AuthServerLaravel5\\": "src/"
+            "JiugeTo\\AuthServerLaravel5\\": "src/"
         }
     }
 }
