--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,17 @@
         }
     ],
     "minimum-stability": "dev",
-    "version": "1.0.0",
     "require": {
-        "php": "5.4"
+        "php": "^7.0"
     },
     "autoload": {
         "psr-4": {
             "JiugeTo\\AuthServerLaravel5\\": "src/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
         }
     }
 }
