--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     },
     "autoload": {
         "psr-4": {
-            "JiugeTo\\AuthServerLaravel5\\": "packages/jiugeto/auth-server-laravel5/src/"
+            "JiugeTo\\AuthServerLaravel5\\": "src/"
         }
     },
-    "version": "1.0.0",
+    "version" : "1.0.0",
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
