--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,12 @@
             "JiugeTo\\AuthServerLaravel5\\": "src/"
         }
     },
+    "version" : "1.0.1",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
