--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "version" : "1.0.1",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.0.0-dev",
+            "v1.0.1": "1.0.1-dev"
         }
     },
     "minimum-stability": "dev",
